--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -13,5 +13,35 @@
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  
+  
+  <ion-card>
+    <ion-card-header>
+      <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+      <ion-card-title>Card Title</ion-card-title>
+    </ion-card-header>
+  
+    <ion-card-content>
+      Keep close to Nature's heart... and break clear away, once in awhile,
+      and climb a mountain or spend a week in the woods. Wash your spirit clean.<br/>
+
+      <ion-chip>
+        <ion-icon name="heart" color="dark"></ion-icon>
+        <ion-label>Default</ion-label>
+      </ion-chip>
+
+      <ion-progress-bar type="indeterminate" reversed="true"></ion-progress-bar>
+
+      <ion-input placeholder="Enter Input"></ion-input>
+    </ion-card-content>
+  </ion-card>
+
+  
+
+  
+
+
+
+  <app-explore-container name="Tab 1 page">
+  </app-explore-container>
 </ion-content>
