--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,8 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Tab 1
-    </ion-title>
+    <ion-title> Tab 1 </ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -13,17 +11,15 @@
     </ion-toolbar>
   </ion-header>
 
-  
-  
   <ion-card>
     <ion-card-header>
       <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
       <ion-card-title>Card Title</ion-card-title>
     </ion-card-header>
-  
+
     <ion-card-content>
-      Keep close to Nature's heart... and break clear away, once in awhile,
-      and climb a mountain or spend a week in the woods. Wash your spirit clean.<br/>
+      Keep close to Nature's heart... and break clear away, once in awhile, and
+      climb a mountain or spend a week in the woods. Wash your spirit clean.<br />
 
       <ion-chip>
         <ion-icon name="heart" color="dark"></ion-icon>
@@ -36,12 +32,5 @@
     </ion-card-content>
   </ion-card>
 
-  
-
-  
-
-
-
-  <app-explore-container name="Tab 1 page">
-  </app-explore-container>
+  <app-explore-container name="Tab 1 page"> </app-explore-container>
 </ion-content>
