add bdge element

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -29,6 +29,12 @@
       <ion-progress-bar type="indeterminate" reversed="true"></ion-progress-bar>
 
       <ion-input placeholder="Enter Input"></ion-input>
+
+      <ion-item>
+        <ion-badge slot="start">11</ion-badge>
+        <ion-label>My Item</ion-label>
+        <ion-badge slot="end">22</ion-badge>
+      </ion-item>
     </ion-card-content>
   </ion-card>
 
